<resources>
    <string name="app_name" translatable="false">TripLog</string>
    <string name="navigation_drawer_open">Abrir navegación</string>
    <string name="navigation_drawer_close">Cerrar navegación</string>
    <string name="myTrips">Mis Viajes</string>
    <string name="listaDeseos">Lista de deseos</string>
    <string name="myProfile">Perfil</string>
    <string name="action_settings">Configuración</string>
    <string name="share">Compartir</string>
    <string name="communicate">Contacto</string>
    <string name="aboutUs">Acerca de</string>
    <string name="feedback">Danos un comentario</string>
    <string name="title_activity_wish_list">Lista de deseos</string>
    <string name="favorites">Favoritos</string>

    <string name="titulo_admin_viaje">Administrar Viaje</string>
    <string name="tv_nombre">Destino</string>
    <string name="hint_nombre">Ingrese el destino de su viaje</string>
    <string name="tv_fechaInicio">Fecha de Inicio</string>
    <string name="hint_fechaInicio">Seleccione la fecha de inicio del viaje</string>
    <string name="tv_fechaFin">Fecha de Fin</string>
    <string name="hint_fechaFin">Seleccione la fecha de fin del viaje</string>
    <string name="tv_pais">País</string>
    <string-array name="Paises">
        <item>Ecuador</item>
        <item>Colombia</item>
        <item>Perú</item>
        <item>Brasil</item>
        <item>Argentina</item>
    </string-array>
    <string name="tv_descripcion">Descripción</string>
    <string name="hint_descripción">Ingrese una descripción del viaje</string>
    <string name="tv_imagenes">Imagenes</string>
    <string name="btn_camara">Cámara</string>
    <string name="btn_galeria">Galería</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_agregarAlarma">Agregar Alarma</string>
    <string name="titulo_equipaje">Lista de Equipaje</string>
    <string name="hint_items">Agrega un nuevo ítem a tu lista</string>
    <string name="titulo_admin_alarma">Administrar Alarma</string>
    <string name="titulo_admin_plan">Plan de Viaje</string>
    <string name="btn_agregarPlan">Administrar Plan de Viaje</string>
    <string name="btn_adminEquipaje">Administrar Equipaje</string>
    <string name="tv_aerolinea">Aerolínea</string>
    <string name="hint_aerolinea">Ingrese el nombre de la Aerolínea</string>
    <string name="tv_hora">Seleccione la Hora</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="equipaje">Ver equipaje</string>
    <string name="feedbackDesciption">Escriba un comentario sobre TripLog</string>
    <string name="historias">Historias</string>
    <string name="titulo_historias">Administrar Historias</string>
    <string name="lugar">Lugar</string>

    <string-array name="equipaje">
        <item>Cámara</item>
        <item>Repelete</item>
        <item>Cargador</item>
        <item>Batería</item>
    </string-array>
    <string name="registro">Registro</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="diarioDeViajes">Diario de Viajes</string>
    <string name="password">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="ejemploCorreo" translatable="false">usuario@epn.edu.ec</string>
    <string name="registroDeUsuarios">Registro de Usuarios</string>
    <string name="txtEquipaje">equipaje</string>
    <string name="nombre">Nombre</string>
    <string name="email">Correo</string>
    <string name="hint_nombre_historia">Ingrese nombre de la historia</string>
    <string name="hint_desc_historia">Descripción de la historia</string>


</resources>
