<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/perfil"
            android:icon="@drawable/ic_person"
            android:title="@string/myProfile" />
        <item
            android:id="@+id/misViajes"
            android:icon="@drawable/ic_public"
            android:title="@string/myTrips" />

        <item
            android:id="@+id/favoritos"
            android:icon="@drawable/ic_star_black"
            android:title="@string/favorites" />
        <item
            android:id="@+id/listaDeseos"
            android:icon="@drawable/ic_listadeseos"
            android:title="@string/listaDeseos" />
        <item
            android:id="@+id/configuracion"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/compartir"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/feedback" />
            <item
                android:id="@+id/acercaDe"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/aboutUs" />
        </menu>
    </item>
</menu>